plugins {
	id 'org.springframework.boot' version '2.6.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'eclipse'
}

configurations {
	frontendResources {
		canBeConsumed = false
		canBeResolved = true
	}
}

group = 'net.calebscode'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.security:spring-security-messaging'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'mysql:mysql-connector-java'

	frontendResources(project(path: ':frontend', configuration: 'staticResources'))
}

test {
	useJUnitPlatform()
}


tasks.named('build').configure {
	mustRunAfter ':updateStaticResources'
}

tasks.named('processResources').configure {
	dependsOn ':updateStaticResources'
}